[package]
name = "rtask"
version = "0.1.0"
edition = "2021"
authors = ["miisan"]
description = "A simple CLI task tracker"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
colored = "2.0"
dialoguer = "0.10"
confy = "0.5"
tabled = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true